[AETHER-3507] First implementation of a full CRUD for a model
